# count-lines

./: CMakeLists.txt  README.md  test-all.bat  test-all.sh
src/: common.cpp  common.h  count-lines.cpp  count-lines.h  main.cpp  unit-test.cpp
